Adjusted placement of content. Added scrolling textboxes on different panes. Added drop down for Races and Classes. Added a training button to use later.

--- a/CSS/planner.css
+++ b/CSS/planner.css
@@ -2,9 +2,9 @@ body {
 	background-color: silver;
 }
 h1 {
-	color: #745C42;
 	text-align: center;
-	background-color: #000000;
+	margin-left: 200px;
+	margin-right: 200px;
 }
 td {
 	background-color: #0A0A0A; 
@@ -19,8 +19,76 @@ hr {
 	border-color: #745C42;
 	size: 3px;
 }
+select {
+	background: #0A0A0A;
+	color: white;
+	margin-left: 5px;
+	margin-right: 5px;
+}
+/*    SCROLLBAR	
+::-webkit-scrollbar {
+	width: 10px;
+}
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 10px #745C42;
+}
+::-webkit-scrollbar-button:single-button {
+	background-color: transparent;
+	display: block;
+	height: 10px;
+	width: 10px;
+	border-style: solid;
+}
+::-webkit-scrollbar-button:single-button:vertical:decrement {
+	border-width: 0 5px 15px 5px;
+	border-color: transparent transparent #878787 transparent;
+}
+::-webkit-scrollbar-button:single-button:vertical:decrement:hover {
+	border-color: trasparent transparent #565656 transparent;
+}
+::-webkit-scrollbar-button:single-button:vertical:increment {
+	border-width: 15px 5px 0 5px;
+	border-color: #878787 transparent transparent transparent;
+}
+::-webkit-scrollbar-button:single-button:vertical:increment:hover {
+	border-color: #565656 trasparent transparent transparent;
+}
+::-webkit-scrollbar-thumb {
+	background: #878787;
+	border-width: 3px;
+	border-color: #6A6A6A;
+}
+::-webkit-scrollbar-thumb:hover {
+	background: #565656;
+}
+*/
+.buttonborder {
+	background-color: #000000;
+	border-style: solid;
+	border-color: #4D4C4A;
+	border-width: 1px;
+	border-radius: 5px;
+	padding: 3px 1px 3px 1px;
+	margin-left: 95px;
+}
+.button {
+	background-image: radial-gradient(ellipse at top, #4D4C4A, #000000);
+	color: white;
+	border-style: solid;
+	border-color: #4D4C4A;
+	border-width: 1px;
+	border-radius: 5px;
+}
+.button:hover {
+	background-image: radial-gradient(ellipse at top, #B28500, #4A0F00);
+	color: white;
+	border-style: solid;
+	border-color: #918D89;
+	border-width: 1px;
+	border-radius: 5px;
+}
 .table-align {
-	height: 448px;
+	height: 475px;
 	width: 250px;
 }
 .objectborder {
@@ -41,6 +109,8 @@ hr {
 	border-radius: 5px;
 	border-width: 1px;
 	font-size: 12px;
+	margin-top: 2px;
+	margin-bottom: 2px;
 }
 .selectinputborder {
 	background-color: #000000;
@@ -50,6 +120,63 @@ hr {
 	border-radius: 5px;
 	border-width: 1px;
 	font-size: 12px;
+}
+.pagetitle {
+	margin-left: 3px; 
+	margin-right: 3px; 
+	margin-top: 2px;
+	margin-bottom: 3px;
+	padding-left: 5px; 
+}
+.inputspaceone {
+	width: 35px;
+	margin-left: 2px;
+}
+.inputspacetwo {
+	width: 25px;
+	margin-left: 2px;
+	margin-right: 4px;
+}
+.inputspacethree {
+	width: 42px;
+	margin-left: 2px;
+	margin-right: 3px;
+}
+.attbox {
+	background: #111111;
+	height: 110px;
+	width: 240px;
+	overflow: auto;
+	border-width: 2px;
+	border-style: solid; 
+	border-color: #745C42;
+	margin-top: 5px;
+	margin-bottom: 20px;
+	margin-left: 3px;
+}
+.specbox {
+	background: #111111;
+	height: 121px;
+	width: 240px;
+	overflow: auto;
+	border-width: 2px;
+	border-style: solid; 
+	border-color: #745C42;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-left: 3px;
+}
+.abbox {
+	background: #111111;
+	height: 417px;
+	width: 240px;
+	overflow: auto;
+	border-width: 2px;
+	border-style: solid; 
+	border-color: #745C42;
+	margin-top: 7px;
+	margin-bottom: 22px;
+	margin-left: 3px;
 }
 #selectalb {
 	color: red;
