--- a/CSS/planner.css
+++ b/CSS/planner.css
@@ -149,7 +149,7 @@ select {
 	border-style: solid; 
 	border-color: #745C42;
 	margin-top: 5px;
-	margin-bottom: 20px;
+	margin-bottom: 13px;
 	margin-left: 3px;
 }
 .specbox {
@@ -175,6 +175,29 @@ select {
 	margin-top: 7px;
 	margin-bottom: 3px;
 	margin-left: 3px;
+}
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 150px;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
+	background-color: #0A0A0A;
+	color: white;
+	margin: auto;
+	padding: 50px;
+	border: 3px solid #745C42;
+	width: 450px;
+}
+.attributeName {
+	color: gold;
+	font-size: 16px;
 }
 #selectalb {
 	color: black;
