index.html: adjusted button styles, moved onclick event to p where attribute names are from the whole modal, added onclick event to optimize. planner.css: added styles for attribute increment/decrement buttons and area where attribute values are listed. planner.js: increase and decrease attribute bonus functions work properly and print to the modal when updated.

--- a/CSS/planner.css
+++ b/CSS/planner.css
@@ -180,7 +180,7 @@ select {
 	display: none;
 	position: fixed;
 	z-index: 1;
-	padding-top: 150px;
+	padding-top: 10px;
 	width: 100%;
 	height: 100%;
 	overflow: auto;
@@ -191,9 +191,27 @@ select {
 	background-color: #0A0A0A;
 	color: white;
 	margin: auto;
-	padding: 50px;
+	padding: 30px;
 	border: 3px solid #745C42;
 	width: 450px;
+}
+.attbutton {
+	width: 15px;
+	height: 15px;
+	border: 3px solid;
+	background: silver;
+	border-color:  #7a7a7a transparent transparent #7a7a7a;
+	border-radius: 50%;
+	border-width: 0 3px 0 3px;
+	display: inline-block;
+	padding: -3px;
+	margin-left: 5px;
+	margin-right: 5px;
+}
+.attBonus {
+	display: inline-block;
+	width: 20px;
+	text-align: center;
 }
 .attributeName {
 	color: gold;
