--- a/CSS/planner.css
+++ b/CSS/planner.css
@@ -180,9 +180,11 @@ select {
 	display: none;
 	position: fixed;
 	z-index: 1;
-	padding-top: 10px;
+	padding-top: 150px;
 	width: 100%;
 	height: 100%;
+	top: 0;
+	left: 0;
 	overflow: auto;
 	background-color: rgb(0,0,0);
 	background-color: rgba(0,0,0,0.4);
@@ -193,7 +195,11 @@ select {
 	margin: auto;
 	padding: 30px;
 	border: 3px solid #745C42;
-	width: 450px;
+	width: 425px;
+	height: 235px;
+}
+.attcontrols {
+	margin-top: 25px;
 }
 .attbutton {
 	width: 15px;
@@ -216,6 +222,38 @@ select {
 .attributeName {
 	color: gold;
 	font-size: 16px;
+}
+.show_hide {
+	display: none;
+	width: 1300px;
+	margin: auto;
+}
+.selections {
+	text-align: center;
+}
+.paperdoll {
+	background: #111111;
+	height: 318px;
+	width: 240px;
+	overflow: auto;
+	border-width: 2px;
+	border-style: solid; 
+	border-color: #745C42;
+	margin-top: 7px;
+	margin-bottom: 3px;
+	margin-left: 3px;
+}
+.inventory {
+	background: #111111;
+	height: 130px;
+	width: 240px;
+	overflow: auto;
+	border-width: 2px;
+	border-style: solid; 
+	border-color: #745C42;
+	margin-top: 7px;
+	margin-bottom: 3px;
+	margin-left: 3px;
 }
 #selectalb {
 	color: black;
