--- a/CSS/planner.css
+++ b/CSS/planner.css
@@ -231,6 +231,28 @@ select {
 .selections {
 	text-align: center;
 }
+.specImage {
+	display: inline-block;
+	width: 20px;
+	text-align: left;
+	padding-left: 15px;
+	padding-top: 3px;
+	
+}
+.specName {
+	display: inline-block;
+	width: 100px;
+	text-align: left;
+	padding-right: 20px;
+	padding-top: 3px;
+	
+}
+.specLevel {
+	display: inline-block;
+	width: 20px;
+	text-align: right;
+	padding-top 3px;
+}
 .paperdoll {
 	background: #111111;
 	height: 318px;
