--- a/CSS/planner.css
+++ b/CSS/planner.css
@@ -3,6 +3,7 @@ body {
 }
 h1 {
 	text-align: center;
+	font-family: 'kingthings_foundationregular';
 }
 td {
 	background-color: #0A0A0A; 
@@ -251,7 +252,7 @@ select {
 	display: inline-block;
 	width: 20px;
 	text-align: right;
-	padding-top 3px;
+	padding-top: 3px;
 }
 .paperdoll {
 	background: #111111;
