--- a/CSS/planner.css
+++ b/CSS/planner.css
@@ -1,6 +1,8 @@
 body {
 	background: silver;
 	background-repeat: repeat;
+	font-size: 12px;
+	font-family: Arial;
 }
 .daocLogo {
 	position: absolute;
@@ -95,7 +97,7 @@ td {
 	border-style: solid; 
 	border-color: #745C42; 
 	color: white;
-	border-width: 3px;
+	border-width: 2px;
 	font-size: 12px;
 	font-family: Arial;
 	opacity: 0.9;
@@ -156,6 +158,23 @@ select {
 	padding: 3px 1px 3px 1px;
 	margin-left: 95px;
 }
+.buttonborder2 {
+	background-color: #000000;
+	border-style: solid;
+	border-color: #4D4C4A;
+	border-width: 1px;
+	border-radius: 5px;
+	padding: 3px 1px 3px 1px;
+}
+.buttonbordertrainer {
+	background-color: #000000;
+	border-style: solid;
+	border-color: #4D4C4A;
+	border-width: 1px;
+	border-radius: 5px;
+	padding: 3px 1px 3px 1px;
+	margin-left: 10px;
+}
 .button {
 	background-image: radial-gradient(ellipse at top, #4D4C4A, #000000);
 	color: white;
@@ -171,6 +190,23 @@ select {
 	border-color: #918D89;
 	border-width: 1px;
 	border-radius: 5px;
+}
+.button:active {
+	background-image: radial-gradient(ellipse at bottom, #544D2E, #231410);
+	color: white;
+	border-style: solid;
+	border-color: #918D89;
+	border-width: 1px;
+	border-radius: 5px;
+}
+.button2 {
+	background-image: linear-gradient(#5B5958, #0F0E0D);
+	color: white;
+	border-style: solid;
+	border-color: #4D4C4A;
+	border-width: 1px;
+	border-radius: 5px;
+	font-size: 12px;
 }
 .table-align {
 	height: 475px;
@@ -281,19 +317,87 @@ select {
 	color: white;
 	margin: auto;
 	padding: 30px;
-	border: 3px solid #745C42;
+	border: 2px solid silver;
 	width: 425px;
 	height: 235px;
+}
+.trainer {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 80px;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	overflow: auto;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.4);
+}
+.trainer-content {
+	background-image: linear-gradient(#1E1E1E, #252525);
+	background-color: #252525;
+	color: white;
+	margin: auto;
+	padding: 30px;
+	border: 2px solid #745C42;
+	border-width: 2px 2px 0px 2px;
+	width: 350px;
+	height: 575px;
+	outline-style: solid;
+	outline-color: silver;
+	outline-width: thin;
+	outline-offset: 1px;
+}
+#specPointDisp {
+	display: inline-block;
+	position: absolute;
+	margin-left: 40px;
+	width: 500px;
+	margin-top: -45px;
+	font-weight: bold;
+}
+#realmPointDisp {
+	display: inline-block;
+	position: absolute;
+	margin-left: 225px;
+	width: 500px;
+	margin-top: -45px;
+	font-weight: bold;
+}
+.pointTitle {
+	text-align: left;
+	color: white;
+}
+.pointDisp {
+	text-align: center;
+	display: inline-block;
+	color: lightgray;
+	padding-top: 2px;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-bottom: 2px;
+}
+.pointDispNum {
+	text-align: right;
+	color: lightgray;
+	margin-left: 20px;
+}
+.buttonTop {
+	width: 120px;
+}
+.buttonBottom {
+	width: 100px;
 }
 .attcontrols {
 	margin-top: 25px;
 }
 .attbutton {
-	width: 15px;
+	width: 10px;
 	height: 15px;
-	border: 3px solid;
-	background: silver;
-	border-color:  #7a7a7a transparent transparent #7a7a7a;
+	border: 2px solid;
+	background: #7A6D47;
+	border-color:  #C3B489 transparent transparent #C3B489;
 	border-radius: 50%;
 	border-width: 0 3px 0 3px;
 	display: inline-block;
